cmake_minimum_required(VERSION 3.20)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

# 当前文件夹下面的所有.h文件包含进去
include_directories(${CMAKE_SOURCE_DIR})
#include_directories("pv.h")


add_executable(multiThreadAtomic multiThreadAtomic.cpp)
add_executable(multiThreadASem multiThreadASem.cpp)
add_executable(multiThreadConditionVariable multiThreadConditionVariable.cpp)
add_executable(multiThreadMutex multiThreadMutex.cpp)
add_executable(ProducerAndConsumer ProducerAndConsumer.cpp)
add_executable(threadPool threadPool.cpp)
add_executable(threadPool2 threadpool2.cpp)
add_executable(future future.cpp)
add_executable(promise promise.cpp)
add_executable(SharedPtr sharedPtr.cpp)

add_executable(threeSum threeSum.cpp)
add_executable(fourSum fourSum.cpp)
add_executable(islandDFS islandDFS.cpp)
add_executable(mergeTwoLists mergeTwoLists.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(removeNthFromEnd removeNthFromEnd.cpp)
add_executable(reverseList reverseList.cpp)
add_executable(reverseWords reverseWords.cpp)
add_executable(rotateNList rotateNList.cpp)
add_executable(rotateNVector rotateNVector.cpp)
add_executable(Skip Skip.cpp)
add_executable(AddOil addOil.cpp)
add_executable(ThreeThread threeThreads.cpp)
add_executable(Rain rain.cpp)
add_executable(Random2int roman2int.cpp)
add_executable(Int2Roman int2Roman.cpp)
add_executable(LastLength lastLength.cpp)
add_executable(CommonPrefix commonPrefix.cpp)
add_executable(reverseString reverseString.cpp)
add_executable(BinaryTree binaryTree.cpp)
add_executable(lengthOfLIS lengthOfLIS.cpp)
add_executable(maxSum maxSum.cpp)
add_executable(Sort10 Sort10.cpp)

add_executable(newSyncThread newSyncThread.cpp)